--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </nav>
     <section id="home">
         <h2>Home</h2>
+        <strong>Welcome to Jerry's Portfolio</strong>
         <p>Email: <a href="mailto:jnabango@gmail.com">jnabango@gmail.com</a></p>
         <p>Phone: <a href="tel:+254792148386">+254 792148386</a></p>
     </section>
